# scaffold

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
src/scaffold/: __init__.py  main.py
src/scaffold/templates/fastapi/: Dockerfile
src/scaffold/templates/node/: Dockerfile
src/scaffold/templates/python/: Dockerfile
src/scaffold/templates/python/.devcontainer/: devcontainer.json
