[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold-dev"
version = "0.1.0"
description = "A CLI tool to quickly set up developer environments using Docker"
readme = "README.md"
authors = [{name = "Aamish Ahmad Beg", email = "aamishahmadbeg@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["scaffold", "development", "docker", "cli"]
dependencies = [
    "argparse",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/AcnoSaga/scaffold"
"Bug Tracker" = "https://github.com/AcnoSaga/scaffold/issues"

[project.scripts]
scaffold = "scaffold.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scaffold*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
scaffold = ["templates/*/Dockerfile"]