[metadata]
name = scaffold-dev
version = 0.1.0
author = Aamish Ahmad Beg
author_email = aamishahmadbeg@gmail.com
description = A CLI tool to quickly set up developer environments using Docker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AcnoSaga/scaffold
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    argparse

[options.packages.find]
where = src

[options.package_data]
scaffold = templates/*/Dockerfile

[options.entry_points]
console_scripts =
    scaffold = scaffold.main:main